hphp/test/slow/preg-file-mode.php.expectf
Deprecated: preg_replace(): The /e modifier is deprecated, use preg_replace_callback instead in %s/preg-file-mode.php on line 4

Fatal error: syntax error, unexpected ',', expecting ']'
